Dart/testData/analysisServer/highlighting/ErrorsAfterEOF.dart
class Foo implement<error descr="A class declaration must have a body, even if it is empty."><error descr="Classes and mixins can only implement classes."><error descr="Expected a type name."><error descr="Undefined class ''.">s</error></error></error></error>